--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         width: 100%;
         height: 100%;
     }
+    
+    @media only screen and (max-width: 1000px) {
+        embed {
+            height : auto;
+        }
+    }
 </style>
 
 
