--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     @media only screen and (max-width: 1000px) {
         embed {
-            height : auto;
+            height : 50%;
         }
     }
 </style>
