--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Rémy Lasseaux</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CV - Rémy Lasseaux</title>
+    </head>
 
-<style>
-    * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-    body {
-        width: 100%;
-        height: 100vh;
-    }
+        body {
+            width: 100%;
+            height: 100vh;
+        }
 
-    embed {
-        width: 100%;
-        height: 100%;
-    }
-</style>
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 
 
 
-<body>
+    <body>
 
-    <embed src="CV_Remy_Lasseaux.pdf" />
+        <iframe src="CV_Remy_Lasseaux.pdf"></iframe>
 
-    
-</body>
+    </body>
 </html>
