--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <body>
 
-        <iframe src="CV_Remy_Lasseaux.pdf"></iframe>
+        <iframe src="R.Lasseaux.CV.pdf"></iframe>
 
     </body>
 </html>
